--- a/view/organizationalManage/EducationBureauManage.html
+++ b/view/organizationalManage/EducationBureauManage.html
@@ -12,8 +12,10 @@
 		<link rel="stylesheet" href="../../css/knowledge/noBiaoSetKnowledge.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/zTreeStyle/zTreeStyle.css" />
 		<style type="text/css">
-			.layui-layer-content {
-				height: 178px !important;
+			.ztree li a input.rename {
+				height: 20px;
+				width: 120px;
+				padding: 3px 5px;
 			}
 		</style>
 	</head>
