--- a/view/organizationalManage/add_school.html
+++ b/view/organizationalManage/add_school.html
@@ -51,19 +51,21 @@
 						    </label>
 						    <div id="">
 						    	<label>
-							      <input type="radio" name="learning_period" id="primary_5" value="2-5" /> 小学（5年制）
+							      <input type="radio" class="learning_period" name="learning_period" id="primary_5" value="2-5" /> 小学（5年制）
 							    </label>
 							    <label>
-							      <input type="radio" name="learning_period" id="primary_6" value="2-6" /> 小学（6年制）
+							      <input type="radio" class="learning_period" name="learning_period" id="primary_6" value="2-6" /> 小学（6年制）
 							    </label>
+							    <i>双击取消选择</i>
 						    </div>
 						    <div id="">
 						    	<label>
-							      <input type="radio" name="learning_period1" id="junior_high_school_3" value="3-3" /> 初中（3年制）
+							      <input type="radio" class="learning_period" name="learning_period1" id="junior_high_school_3" value="3-3" /> 初中（3年制）
 							    </label>
 							    <label>
-							      <input type="radio" name="learning_period1" id="junior_high_school_4" value="3-4" /> 初中（4年制）
+							      <input type="radio" class="learning_period" name="learning_period1" id="junior_high_school_4" value="3-4" /> 初中（4年制）
 							    </label>
+							    <i>双击取消选择</i>
 						    </div>
 						    <div id="">
 						    	<label>
