--- a/view/organizationalManage/edit_grade.html
+++ b/view/organizationalManage/edit_grade.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="wangjian" content="web" />
-		<title>新建班级</title>
+		<title>修改班级</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="../../css/common/reset.css"/>
 		<link rel="stylesheet" href="../../plugin/bootstrap/bootstrap.min.css" />
@@ -48,7 +48,7 @@
 						<div class="col-sm-7">
 							<button class="btn-sm add_teacher" style="float: right;">新增</button> <br /><br />
 							
-							<table class="table teacher_lists" border="1">
+							<table class="table teacher_lists">
 								<thead>
 									<th>科目</th>
 									<th>任课教师</th>
