--- a/view/userManage/parents_edit.html
+++ b/view/userManage/parents_edit.html
@@ -272,6 +272,7 @@
 	<script type="text/javascript" src="../../plugin/layer/layer.js"></script>
 	<script src="../../js/bootstrap-datetimepicker.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/bootstrap-datetimepicker.zh-CN.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../js/dataUrl.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/userManage/add_parents.js"></script>
 
 </html>
