--- a/view/jurisdictionManage/role_edit.html
+++ b/view/jurisdictionManage/role_edit.html
@@ -54,7 +54,7 @@
 							<span class="warn" style="padding-left: 20px;">角色名称</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="admin_name" id="admin_name" class="form-control" value="" />
+							<input type="text" name="admin_name" id="admin_name" class="form-control" maxlength="20" value="" />
 						</div>
 					</div>
 					<div class="form-group">
@@ -62,7 +62,7 @@
 							<span class="" style="padding-left: 20px;">角色描述</span>
 						</label>
 						<div class="col-sm-8">
-							<textarea name="" id="admin_note" class="form-control" rows="5" ></textarea>
+							<textarea name="" id="admin_note" maxlength="100" class="form-control" rows="5" ></textarea>
 						</div>
 					</div>
 				</div>
