--- a/view/organizationalManage/add_grade.html
+++ b/view/organizationalManage/add_grade.html
@@ -52,7 +52,7 @@
 						<div class="col-sm-7">
 							<button class="btn-sm add_teacher" style="float: right;">新增</button> <br /><br />
 
-							<table class="table teacher_lists" border="1">
+							<table class="table teacher_lists table-hover">
 								<thead>
 									<th>科目</th>
 									<th>任课教师</th>
@@ -77,7 +77,7 @@
 					<div class="modal-body">
 						教师姓名：<input type="text" name="" id="select_teacher_name" value="" />
 						<button class="select_teacher">查询</button><br /><br />
-						<table class="table" border="1">
+						<table class="table table-hover">
 							<tr>
 								<th>老师姓名</th>
 								<th>手机号</th>
