--- a/view/organizationalManage/schoolManage.html
+++ b/view/organizationalManage/schoolManage.html
@@ -46,15 +46,13 @@
 				<div class="list_btm">
 					<div class="table-responsive">
 						<table class="table table-condensed addlist school_lists" style="text-align: center;">
-							<thead>
-								<tr>
-									<th>序号</th>
-									<th>学校名称</th>
-									<th>上级管理机构</th>
-									<th>最后编辑时间</th>
-									<th>操作</th>
-								</tr>
-							</thead>
+							<tr>
+								<td><strong>序号</strong></td>
+								<td><strong>学校名称</strong></td>
+								<td><strong>上级管理机构</strong></td>
+								<td><strong>最后编辑时间</strong></td>
+								<td><strong>操作</strong></td>
+							</tr>
 							<tbody id="schools">
 								<tr v-for="(vals,index) in data">
 									<td>{{index+1}}</td>
@@ -63,7 +61,7 @@
 									<td>{{vals.lastupdate}}</td>
 									<td>
 										<a v-bind:href="'add_school.html?id='+vals.id" v-bind:data-id="vals.id" class="edit_school" v-on:click="operateSchool('编辑')">编辑</a>
-										<a v-bind:href="'gradeManage.html?id='+vals.id+'&name='+vals.name" v-bind:data-id="vals.id" class="grade_manage" v-on:click="operateSchool('班级管理')">班级管理</a>
+										<a v-bind:href="'gradeManage.html?id='+vals.id+'&name='+encodeURIComponent(vals.name)" v-bind:data-id="vals.id" class="grade_manage" v-on:click="operateSchool('班级管理')">班级管理</a>
 									</td>
 								</tr>
 							</tbody>
@@ -104,7 +102,7 @@
 				},
 				methods: {
 					operateSchool: function(text) {
-						$('.breadcrumb', window.parent.document).append('<li class="active add_school"><span class="Current_page iframeurl" name="view/organizationalManage/add_school.html" style="color: rgb(51, 51, 51); cursor: default;">' + text + '</span></li>');
+//						$('.breadcrumb', window.parent.document).append('<li class="active add_school"><span class="Current_page iframeurl" name="view/organizationalManage/add_school.html" style="color: rgb(51, 51, 51); cursor: default;">' + text + '</span></li>');
 					},
 					//查询学校
 					selectschool: function(schoolname) {
@@ -138,7 +136,7 @@
 				}
 				$.ajax({
 					type: "get",
-					url: org_url + dataUrl.schoolLists,
+					url: org_url + dataUrl.schools,
 					data: datajson,
 					success: function(data) {
 						if (data.code=='10010') {
@@ -161,7 +159,7 @@
 								datajson.size = size;
 								$.ajax({
 									type: "get",
-									url: org_url + dataUrl.schoolLists,
+									url: org_url + dataUrl.schools,
 									data: datajson,
 									success: function(data){
 										if (data.code=='10010') {
@@ -180,7 +178,7 @@
 								datajson.size = ps;
 								$.ajax({
 									type: "get",
-									url: org_url + dataUrl.schoolLists,
+									url: org_url + dataUrl.schools,
 									data: datajson,
 									success: function(data){
 										if (data.code=='10010') {
