--- a/view/userManage/admin_edit.html
+++ b/view/userManage/admin_edit.html
@@ -55,13 +55,13 @@
 							<span class="warn" style="padding-left: 20px;">姓名</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="admin_name" id="admin_name" class="form-control" value="" />
+							<input type="text" maxlength="20" name="admin_name" id="admin_name" class="form-control" value="" />
 						</div>
 						<label class="col-sm-2 control-label text-right">
 							<span class="warn" style="padding-left: 20px;">手机号</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="admin_phone" id="admin_phone" class="form-control" value="" />
+							<input type="text" name="admin_phone" maxlength="11" id="admin_phone" class="form-control" value="" />
 						</div>
 					</div>
 					<div class="form-group">
@@ -79,7 +79,7 @@
 							<span class="" style="padding-left: 20px;">备注</span>
 						</label>
 						<div class="col-sm-8">
-							<textarea name="" id="admin_note" class="form-control" rows="5" ></textarea>
+							<textarea name="" id="admin_note" maxlength="200" class="form-control" rows="5" ></textarea>
 						</div>
 					</div>
 				</div>
