--- a/view/userManage/student_list.html
+++ b/view/userManage/student_list.html
@@ -41,7 +41,7 @@
 			}
 			
 			.remove_student {
-				color: #EEEEEE;
+				color: #777;
 			}
 			
 			.remove_student:hover {
@@ -96,7 +96,7 @@
 						<div class="form-group">
 							<label for="secondname" class="col-sm-1 control-label text-center">学生姓名</label>
 							<div class="col-sm-2">
-								<input type="tel" name="" class="form-control" id="studentname" />
+								<input type="tel" name="" class="form-control" id="studentname" maxlength="20" />
 							</div>
 
 							<label for="secondname" class="col-sm-1 control-label text-center">用户状态</label>
@@ -109,7 +109,7 @@
 							</div>
 							<label for="secondname" class="col-sm-1 control-label text-center"></label>
 							<div class="col-sm-1">
-								<a href="javascript:;" class="form-control btn btn-default" v-on:click="searchstudent">查询</a>
+								<a href="javascript:;" class="form-control btn btn-default" style="background: #4dd368;color: #fff;" v-on:click="searchstudent">查询</a>
 							</div>
 						</div>
 
@@ -143,7 +143,7 @@
 								<tbody>
 									<tr v-for="(student,index) in studentLists" :class="{warning:iswarning}">
 										<td><input type="checkbox" v-bind:value="student.id" class="checkItem" :checked="allchecked" @click="checkOne($event)" /></td>
-										<td>{{index+1}}</td>
+										<td>{{(index + 1)}}</td>
 										<td>{{student.sname}}</td>
 										<td>{{student.gradename}}</td>
 										<td>{{student.cname}}</td>
@@ -156,7 +156,7 @@
 											<a href="javascript:;" @click="seeStudent('edit',student.id)">编辑</a>
 											<a href="javascript:;" @click="enableValid(index)" v-bind:value="student.valid" v-if="student.valid=='0'">启用</a>
 											<a href="javascript:;" @click="enableValid(index)" v-else>禁用</a>
-											<a href="javascript:;" @click="delStudent(student.id,$event)">删除</a>
+											<a href="javascript:;" @click="delStudent(student.id,$event,index)">删除</a>
 										</td>
 									</tr>
 								</tbody>
@@ -222,13 +222,13 @@
 								<span class="">导入文件</span>
 							</label>
 									<div class="col-sm-9">
-										<input type="file" name="student_file" id="student_file" />
+										<input type="file" name="student_file" id="student_file" accept=".xls,.xlsx" />
 									</div>
 								</div>
 							</form>
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-primary" id="toStudentOk">确定</button>
+							<button type="button" class="btn btn-primary" id="toStudentOk" v-bind:disabled="checksubmit">确定</button>
 							<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
 						</div>
 					</div>
@@ -240,7 +240,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title">导入选择</h4>
+							<h4 class="modal-title"></h4>
 						</div>
 						<div class="modal-body">
 							<label class="col-sm-12 control-label">
